Team allocation view updates

--- a/admin/index.html
+++ b/admin/index.html
@@ -19,11 +19,12 @@ title: Administration
           <div class="col">
             <div class="card h-100">
               <div class="card-header">
-                Users and organisations
+                People and organisations
               </div>
               <div class="card-body">
                 <ul class="list-unstyled">
                   <li class="mb-2"><a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="#">Settings</a></li>
+                  <li class="mb-2"><a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="#">Subjects</a></li>
                   <li class="mb-2"><a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="#">Teams</a></li>
                   <li class="mb-2"><a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="/admin/admin-users">Users</a></li>
                 </ul>
@@ -68,6 +69,8 @@ title: Administration
                   <li class="mb-2"><a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="#">Ethnicities</a></li>
                   <li class="mb-2"><a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="#">Exception reasons</a></li>
                   <li class="mb-2"><a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="#">Genders</a></li>
+                  <li class="mb-2"><a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="#">Images</a></li>
+                  <li class="mb-2"><a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="#">Import from CSV</a></li>
                   <li class="mb-2"><a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="#">Languages</a></li>
                   <li class="mb-2"><a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="#">Legal status</a></li>
                   <li class="mb-2"><a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="#">LA names</a></li>
@@ -75,8 +78,9 @@ title: Administration
                   <li class="mb-2"><a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="#">Primary needs types</a></li>
                   <li class="mb-2"><a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="#">Revert case reasons</a></li>
                   <li class="mb-2"><a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="#">Setting types</a></li>
-                  <li class="mb-2"><a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="#">System settings</a></li>
+                  <li class="mb-2"><a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="#">Subject tags</a></li>
                   <li class="mb-2"><a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="#">Support audit</a></li>
+                  <li class="mb-2"><a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="#">System settings</a></li>
                   <li class="mb-2"><a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="#">Work based placements</a></li>
                 </ul>
               </div>
