--- a/user-profile/index.html
+++ b/user-profile/index.html
@@ -26,13 +26,13 @@ title: EHC Hub
                 <div class="mb-3">
                   <label for="exampleInputText1" class="form-label">Name</label>
                   <input type="text" class="form-control" id="exampleInputText1" aria-describedby="nameHelp">
-                  <div id="nameHelp" class="form-text">This is how it will appear to other people.</div>
+                  <div id="nameHelp" class="form-text">This is how your name  will appear to other people.</div>
                 </div>
               </div>
               <div class="col-md-6">
                 <div class="mb-3">
                   <label for="exampleInputRole1" class="form-label">Role</label>
-                  <input class="form-control" id="exampleInputRole1" type="text" value="Co-ordinator" aria-label="Role" disabled readonly aria-describedby="roleHelp">
+                  <input class="form-control" id="exampleInputRole1" type="text" value="Co-ordinator" aria-label="Role" readonly aria-describedby="roleHelp">
                   <div id="roleHelp" class="form-text">The type of access in the EHC Hub and cannot be changed.</div>
                 </div>
               </div>
