--- a/reports/index.html
+++ b/reports/index.html
@@ -53,35 +53,43 @@ title: Reporting
                 </div>
               </div>
               <div class="card-body">
-                <p>An overview of activity on a chosen date.</p>
-                <div class="form-floating my-5">
-                  <input type="date" id="activityDate" class="form-control ms-auto my-3" aria-label="Default select example"></input>
-                  <label for="activityDate">Select a date</label>
-                </div>
+                <p>An overview of current activity.</p>
                 <div class="mt-6 table-responsive">
                    <table class="table table-striped table-hover table-borderless idx-results-table align-middle no-wrap mt-0">
                      <thead>
                        <tr>
-                         <th scope="col">Activity</th>
-                         <th scope="col">Total</th>
+                         <th scope="col">Activity<i class="fa fa-sort ms-1"></i></th>
+                         <th scope="col">Total<i class="fa fa-sort ms-1"></i></th>
                        </tr>
                      </thead>
                      <tbody>
+                       <tr>
+                         <td>Cases</td>
+                         <td>12,398</td>
+                       </tr>
                        <tr>
                          <td>EHC Plans</td>
                          <td>10,894</td>
                        </tr>
                        <tr>
-                         <td>Active reviews</td>
+                         <td>NEET</td>
+                         <td><a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="#">267</a></td>
+                       </tr>
+                       <tr>
+                         <td>Overdue EHCPs</td>
+                         <td><a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="#">92</a></td>
+                       </tr>
+                       <tr>
+                         <td>Overdue reviews</td>
+                         <td><a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="#">198</a></td>
+                       </tr>
+                       <tr>
+                         <td>Reviews</td>
                          <td>2,387</td>
                        </tr>
                        <tr>
-                         <td>Active cases</td>
-                         <td>12,398</td>
-                       </tr>
-                       <tr>
-                         <td>NEET</td>
-                         <td>267</td>
+                         <td>Safeguarding</td>
+                         <td><a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="#">19</a></td>
                        </tr>
                     </tbody>
                   </table>
