--- a/onboarding/tfa-app.html
+++ b/onboarding/tfa-app.html
@@ -45,7 +45,7 @@ title: EHC Hub
 
 			<a class="btn btn-primary idx-login-btn mt-3 mb-6" href="/work-tray">Continue</a>
 
-			<p>If you'd rather receive a text message (SMS), <a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="tfa-choose">start again</a>.
+			<p>If you'd rather receive an email, <a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="tfa-choose">start again</a>.
 
 		</main>
 
