--- a/onboarding/tfa-choose.html
+++ b/onboarding/tfa-choose.html
@@ -20,15 +20,7 @@ title: EHC Hub
 			  <input class="form-check-input" type="radio" name="flexRadioApp" id="flexRadioApp">
 			  <label class="form-check-label" for="flexRadioApp">
 			    <p class="mb-1">Smartphone or tablet app</p>
-					<p class="text-neutral-500">Look up your code without relying on mobile phone reception or if you don't wish the local authority to store your mobile phone number.</p>
-			  </label>
-			</div>
-
-			<div class="form-check">
-			  <input class="form-check-input" type="radio" name="flexRadioSMS" id="flexRadioSMS">
-			  <label class="form-check-label" for="flexRadioSMS">
-			    <p class="mb-1">Text message</p>
-					<p class="text-neutral-500">We'll send your code by text message (SMS). There is no cost to you.</p>
+					<p class="text-neutral-500">More detailed first-time setup but fastest and most secure each time you log in.</p>
 			  </label>
 			</div>
 
@@ -36,7 +28,7 @@ title: EHC Hub
 			  <input class="form-check-input" type="radio" name="flexRadioSMS" id="flexRadioEmail">
 			  <label class="form-check-label" for="flexRadioEmail">
 			    <p class="mb-1">Email</p>
-					<p class="text-neutral-500">We'll send your code to your account email address.</p>
+					<p class="text-neutral-500">Quicker first-time setup but relies on receiving an email each time you log in.</p>
 			  </label>
 			</div>
 
@@ -51,8 +43,6 @@ title: EHC Hub
 			</div>
 
 			<a class="btn btn-primary idx-login-btn my-6" href="tfa-app">Continue</a>
-
-			<a class="mt-3 mb-6 link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="tfa-phrase">What if I don't have a mobile phone?</a>
 
 		</main>
 
