--- a/case-view/index.html
+++ b/case-view/index.html
@@ -55,6 +55,7 @@ title: Case summary
                       <li><h6 class="dropdown-header">EHCP options</h6></li>
                       <li><a class="dropdown-item" href="#">Amend EHCP</a></li>
                       <li><a class="dropdown-item" href="#">Amend issue date</a></li>
+                      <li><a class="dropdown-item" href="funding">Funding</a></li>
                       <li><hr class="dropdown-divider"></li>
                       <li><h6 class="dropdown-header">Card options</h6></li>
                       <li><a class="dropdown-item" href="#">Hide card</a></li>
@@ -393,7 +394,7 @@ title: Case summary
     <div class="row mt-5">
       <div class="col">
 
-        <div class="d-flex flex-column flex-md-row justify-content-md-end">
+        <div class="d-flex justify-content-end">
           <div class="dropdown">
             <a class="btn btn-neutral-50" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
               <i class="fal fa-ellipsis-v-alt px-1"></i>
