--- a/reports/exports.html
+++ b/reports/exports.html
@@ -44,14 +44,20 @@ title: Reporting
                <td class="no-wrap"><a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="#"><i class="fal fa-file-download me-1"></i>Download</a></td>
              </tr>
              <tr>
+               <td>Cases</td>
+               <td class="d-none d-md-table-cell">Key information for every case.</td>
+               <td>CSV</td>
+               <td class="no-wrap"><a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="#"><i class="fal fa-file-download me-1"></i>Download</a></td>
+             </tr>
+             <tr>
                <td>Education settings</td>
                <td class="d-none d-md-table-cell">Details of all education settings in the Hub.</td>
                <td>CSV</td>
                <td class="no-wrap"><a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="#"><i class="fal fa-file-download me-1"></i>Download</a></td>
              </tr>
              <tr>
-               <td>Cases</td>
-               <td class="d-none d-md-table-cell">Key information for every case.</td>
+               <td>Funding</td>
+               <td class="d-none d-md-table-cell">Current funding details for all children and young people with an EHC Plan.</td>
                <td>CSV</td>
                <td class="no-wrap"><a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="#"><i class="fal fa-file-download me-1"></i>Download</a></td>
              </tr>
