--- a/reports/exports.html
+++ b/reports/exports.html
@@ -62,6 +62,12 @@ title: Reporting
                <td class="no-wrap"><a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="#"><i class="fal fa-file-download me-1"></i>Download</a></td>
              </tr>
              <tr>
+               <td>Mediation</td>
+               <td class="d-none d-md-table-cell">All records of mediation activity.</td>
+               <td>CSV</td>
+               <td class="no-wrap"><a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="#"><i class="fal fa-file-download me-1"></i>Download</a></td>
+             </tr>
+             <tr>
                <td>Panel meetings</td>
                <td class="d-none d-md-table-cell">Details of all panel meetings.</td>
                <td>CSV</td>
@@ -104,8 +110,20 @@ title: Reporting
                <td class="no-wrap"><a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="#"><i class="fal fa-file-download me-1"></i>Download</a></td>
              </tr>
              <tr>
+               <td>Tasks</td>
+               <td class="d-none d-md-table-cell">Tasks linked to mediation and tribunal activity.</td>
+               <td>CSV</td>
+               <td class="no-wrap"><a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="#"><i class="fal fa-file-download me-1"></i>Download</a></td>
+             </tr>
+             <tr>
                <td>Teams</td>
                <td class="d-none d-md-table-cell">Details of all teams of professionals in the Hub.</td>
+               <td>CSV</td>
+               <td class="no-wrap"><a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="#"><i class="fal fa-file-download me-1"></i>Download</a></td>
+             </tr>
+             <tr>
+               <td>Tribunals</td>
+               <td class="d-none d-md-table-cell">All records of tribunal activity.</td>
                <td>CSV</td>
                <td class="no-wrap"><a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="#"><i class="fal fa-file-download me-1"></i>Download</a></td>
              </tr>
