--- a/admin/admin-users.html
+++ b/admin/admin-users.html
@@ -17,7 +17,7 @@ title: Users
         </aside>
 
         <h1>Users</h1>
-        <p>Manage your EHC Hub users.</p>
+        <p>Manage your SEND Hub users.</p>
 
         {% include search-users.html %}
 
