--- a/anon/about-2.html
+++ b/anon/about-2.html
@@ -9,9 +9,9 @@ title: Request step 2
 
 
 
-  <main id="content" class="main container-fluid mt-3 px-7 mt-xl-8 px-xl-8">
+  <main id="content" class="main container-fluid mt-3 px-7 mt-5 px-xl-8">
     <div class="row gx-5 gy-2 px-xl-5">
-      <div class="col-md-8 break-word">
+      <div class="col-md-8 mx-auto break-word">
 
         <h1>What is an Education, Health & Care Plan (EHC Plan)?</h1>
         <h2>Should I speak to the school or college first?</h2>
