--- a/anon/thank-you.html
+++ b/anon/thank-you.html
@@ -9,7 +9,7 @@ title: Request for assessment
 
 
 
-  <main id="content" class="main container-fluid mt-3 px-7 mt-xl-8 px-xl-8">
+  <main id="content" class="main container-fluid mt-3 px-7 mt-5 px-xl-8">
     <div class="row gx-5 gy-2 px-xl-5">
       <div class="col-md-8 break-word">
 
