--- a/cookies/index.html
+++ b/cookies/index.html
@@ -46,7 +46,7 @@ title: Cookies
           </table>
         </div>
 
-        <p>The following cookies are essential for the operation of the the EHC Hub. Blocking or deleting these cookies from your web browser will limit or prevent your use of the site.</p>
+        <p>The following cookies are essential for the operation of the the SEND Hub. Blocking or deleting these cookies from your web browser will limit or prevent your use of the site.</p>
 
         <h2>Anonymous analytics cookies</h2>
 
