--- a/help/index.html
+++ b/help/index.html
@@ -13,7 +13,7 @@ title: Help
       <div class="col-md-8 break-word">
 
         <h1>Help</h1>
-        <p>For assistance using the EHC Hub, please refer to the guidance documents and videos below. Further assistance can be sought from an administrator of the EHC Hub within your local authority. Please refer to your service manager to help identify the relevant contact person.</p>
+        <p>For assistance using the SEND Hub, please refer to the guidance documents and videos below. Further assistance can be sought from an administrator of the SEND Hub within your local authority. Please refer to your service manager to help identify the relevant contact person.</p>
 
         <h2>Documents</h2>
 
