--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: headerless
-title: EHC Hub
+title: SEND Hub
 ---
 
 <div class="container-fluid">
@@ -11,14 +11,20 @@ title: EHC Hub
 
 		<main id="content" class="col-md-6 col-lg-4 p-7 idx-login-form">
 			<img src="/assets/images/idox-logo.gif" alt="Edgehill logo" height="90" class="ms-auto d-block mb-2">
-			<h2 class="idx-login-name">EHC Hub</h2>
+			<h2 class="idx-login-name">SEND Hub</h2>
 			<h3 class="idx-login-descriptor">Edgehill Council</h3>
 			<h4 class="idx-login-heading my-7">Log in</h4>
 
-			<div class="alert alert-warning d-none d-flex p-4" role="alert">
-				<div>
-					There is planned maintenance on Friday, 16th February. The hub may be unavailable during this time.
-				</div>
+			<div class="callout callout-info d-none" role="alert">
+				<p>This is a prototype.</p>
+			</div>
+
+			<div class="callout callout-warning" role="alert">
+				<p>There is planned maintenance on Saturday, 23 November 8:30 - 11:00am. The hub may be unavailable during this time.</p>
+			</div>
+
+			<div class="callout callout-error d-none" role="alert">
+				<p>SMS verificaition codes are currently unavailable. We are working to restore the service.</p>
 			</div>
 
 			<div class="form mb-3">
