--- a/modals/index.html
+++ b/modals/index.html
@@ -9,12 +9,12 @@ title: Modals
 
 
 
-  <main id="content" class="main container-fluid mt-3 px-7 mt-xl-8 px-xl-8">
+  <main id="content" class="main container-fluid mt-3 px-7 mt-5 px-xl-8">
     <div class="row gx-5 gy-2 px-xl-5">
       <div class="col-md-8 break-word">
 
         <h1>Modals</h1>
-        <p>A collection of modals used in the EHC Hub.</p>
+        <p>A collection of modals used in the SEND Hub.</p>
 
         <a data-bs-toggle="modal" data-bs-target="#commentModal" type="button" tabindex="0" class="btn btn-neutral-50 me-2 my-5"><i class="fal fa-paper-plane me-2"></i>Submit comments</a>
 
