--- a/onboarding/index.html
+++ b/onboarding/index.html
@@ -1,6 +1,6 @@
 ---
 layout: headerless
-title: EHC Hub
+title: SEND Hub
 ---
 
 <div class="container-fluid">
@@ -11,7 +11,7 @@ title: EHC Hub
 
 		<main id="content" class="col-md-6 col-lg-4 p-7 idx-login-form">
 			<img src="/assets/images/idox-logo.gif" alt="Edgehill logo" height="90" class="ms-auto d-block mb-2">
-			<h2 class="idx-login-name">EHC Hub</h2>
+			<h2 class="idx-login-name">SEND Hub</h2>
 			<h3 class="idx-login-descriptor">Edgehill Council</h3>
 			<h4 class="idx-login-heading my-7">Create a password</h4>
 			<p>Your password must have:</p>
