--- a/onboarding/tfa-choose.html
+++ b/onboarding/tfa-choose.html
@@ -1,6 +1,6 @@
 ---
 layout: headerless
-title: EHC Hub
+title: SEND Hub
 ---
 
 <div class="container-fluid">
@@ -11,7 +11,7 @@ title: EHC Hub
 
 		<main id="content" class="col-md-6 col-lg-4 p-7 idx-login-form">
 			<img src="/assets/images/idox-logo.gif" alt="Edgehill logo" height="90" class="ms-auto d-block mb-2">
-			<h2 class="idx-login-name">EHC Hub</h2>
+			<h2 class="idx-login-name">SEND Hub</h2>
 			<h3 class="idx-login-descriptor">Edgehill Council</h3>
 			<h4 class="idx-login-heading my-7">You need to enter a code each time you log in</h4>
 			<p>How do you want to get your code?</p>
@@ -39,7 +39,7 @@ title: EHC Hub
 
       <div class="collapse my-2 px-4 py-2" id="tfa-info">
 				<p>When you log in to an online account, you're proving that you are who you say you are. Traditionally that is achieved by a username and a password.</p>
-				<p class="mb-0">When the account you’re accessing includes sensitive information, it’s expected that you provide an extra piece of information. The EHC Hub does this by asking you to enter a unique code each time you log in.</p>
+				<p class="mb-0">When the account you’re accessing includes sensitive information, it’s expected that you provide an extra piece of information. The SEND Hub does this by asking you to enter a unique code each time you log in.</p>
 			</div>
 
 			<a class="btn btn-primary idx-login-btn my-6" href="tfa-app">Continue</a>
