--- a/user-profile/index.html
+++ b/user-profile/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: EHC Hub
+title: SEND Hub
 ---
 
 <div class="d-flex flex-fill flex-column flex-md-row">
@@ -33,7 +33,7 @@ title: EHC Hub
                 <div class="mb-3">
                   <label for="exampleInputRole1" class="form-label">Role</label>
                   <input class="form-control" id="exampleInputRole1" type="text" value="Co-ordinator" aria-label="Role" readonly aria-describedby="roleHelp">
-                  <div id="roleHelp" class="form-text">The type of access in the EHC Hub and cannot be changed.</div>
+                  <div id="roleHelp" class="form-text">The type of access in the SEND Hub and cannot be changed.</div>
                 </div>
               </div>
             </div>
@@ -60,7 +60,7 @@ title: EHC Hub
                 <div class="mb-3">
                   <label for="exampleInputTextJob1" class="form-label">Job title</label>
                   <input type="text" class="form-control" id="exampleInputTextJob1" aria-describedby="jobHelp">
-                  <div id="jobHelp" class="form-text">This can provide context to others in the EHC Hub.</div>
+                  <div id="jobHelp" class="form-text">This can provide context to others in the SEND Hub.</div>
                 </div>
               </div>
             </div>
