--- a/accessibility/index.html
+++ b/accessibility/index.html
@@ -12,9 +12,9 @@ title: Accessibility
     <div class="row gx-5 gy-2 px-xl-5">
       <div class="col-md-8 break-word">
 
-        <h1>Accessibility statement for EHC Hub</h1>
+        <h1>Accessibility statement for SEND Hub</h1>
 
-        <p>This accessibility statement applies to the Education, Health and Care Hub (EHC Hub).</p>
+        <p>This accessibility statement applies to the Education, Health and Care Hub (SEND Hub).</p>
         <p>This website is administered by Edgehill Council and provided by Idox Software Ltd. We want as many people as possible to be able to use this website. For example, that means you should be able to:</p>
 
         <ul>
