--- a/admin/create-user.html
+++ b/admin/create-user.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: EHC Hub
+title: SEND Hub
 ---
 
 <div class="d-flex flex-fill flex-column flex-md-row">
@@ -53,7 +53,7 @@ title: EHC Hub
                 <div class="mb-3">
                   <label for="exampleInputTextJob1" class="form-label">Job title</label>
                   <input type="text" class="form-control" id="exampleInputTextJob1" aria-describedby="jobHelp">
-                  <div id="jobHelp" class="form-text">This can provide context to others in the EHC Hub.</div>
+                  <div id="jobHelp" class="form-text">This can provide context to others in the SEND Hub.</div>
                 </div>
               </div>
               <div class="col-md-6">
