--- a/admin/index.html
+++ b/admin/index.html
@@ -13,7 +13,7 @@ title: Administration
       <div class="col">
 
         <h1>Administration</h1>
-        <p>Configure and administer different sections of the EHC Hub for your needs.</p>
+        <p>Configure and administer different sections of the SEND Hub for your needs.</p>
 
         <div class="row row-cols-1 row-cols-md-3 row-cols-xl-4 g-4">
           <div class="col">
