--- a/anon/index.html
+++ b/anon/index.html
@@ -9,9 +9,9 @@ title: Request step 1
 
 
 
-  <main id="content" class="main container-fluid mt-3 px-7 mt-xl-8 px-xl-8">
+  <main id="content" class="main container-fluid mt-3 px-7 mt-5 px-xl-8">
     <div class="row gx-5 gy-2 px-xl-5">
-      <div class="col-md-8 break-word">
+      <div class="col-md-8 mx-auto break-word">
 
         <h1>What is an Education, Health and Care Plan (EHC Plan)?</h1>
         <p>An Education, Health & Care Plan or EHCP is a document which sets out the education, health and social care needs of a child or young person aged up to 25, and the support that is necessary to help them achieve their outcomes.</p>
@@ -22,7 +22,7 @@ title: Request step 1
         <p>The purpose of SEN support is to help children achieve the outcomes or learning objectives that have been set for them.</p>
 
         <h2>How do I get an EHCP?</h2>
-        <p>An EHC plan can only be issued after a child or young person has gone through the process of EHC needs assessment. At the end of that process, the local authority has to make a decision to issue to issue an EHC Plan or not.</p>
+        <p>An EHC plan can only be issued after a child or young person has gone through the process of EHC needs assessment. At the end of that process, the local authority has to make a decision to issue an EHC Plan or not.</p>
 
         <div class="d-flex justify-content-between">
           <a href="/index" class="btn btn-neutral-50 me-2"><i class="fal fa-arrow-circle-left me-2"></i>Back</a>
