--- a/parent-dash/index.html
+++ b/parent-dash/index.html
@@ -8,9 +8,9 @@ title: Parent dash
 
   {% include sidenav-parent.html %}
 
-  <main id="content" class="main container-fluid mt-3 px-7 mt-xl-8 px-xl-8">
+  <main id="content" class="main container-fluid mt-3 px-7 mt-5 px-xl-8">
     <div class="row gx-5 gy-2 px-xl-5">
-      <div class="col-lg-8">
+      <div class="col-lg-8 mx-auto">
 
         <ul class="nav idx-tabs">
           <li class="nav-item">
